--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Список задач</title>
-</head>
-<body>
-<div id="app"></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>График</title>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
